--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@types/jquery": "^3.5.5",
     "@types/materialize-css": "^1.0.8",
     "compression-webpack-plugin": "^7.1.2",
-    "css-loader": "^5.1.2",
+    "css-loader": "^5.1.3",
     "eslint-loader": "^4.0.2",
     "file-loader": "^6.2.0",
     "jquery": "^3.6.0",
+    "jquery-validation": "^1.19.3",
     "materialize-css": "^1.0.0",
     "mini-css-extract-plugin": "^1.3.9",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
@@ -32,7 +33,8 @@
     "uglifyjs-webpack-plugin": "^2.2.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.34",
+    "@types/jquery.validation": "^1.16.6",
+    "@types/node": "^14.14.35",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-server": "^3.11.2",
     "@webpack-cli/init": "^1.1.3",
@@ -43,7 +45,7 @@
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.3",
-    "webpack": "^5.25.0",
+    "webpack": "^4.0.0",
     "webpack-cli": "^4.5.0"
   },
   "keywords": [],
