--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
   },
   "homepage": "https://github.com/F3LENYR/gsb_app#readme",
   "dependencies": {
+    "@babel/preset-env": "^7.14.1",
     "@types/jquery": "^3.5.5",
-    "@types/materialize-css": "^1.0.8",
+    "@types/materialize-css": "^1.0.9",
     "compression-webpack-plugin": "^7.1.2",
-    "css-loader": "^5.1.3",
+    "css-loader": "^5.2.4",
+    "eslint": "^7.26.0",
     "eslint-loader": "^4.0.2",
     "file-loader": "^6.2.0",
     "jquery": "^3.6.0",
     "jquery-validation": "^1.19.3",
+    "jscodeshift": "^0.12.0",
     "materialize-css": "^1.0.0",
-    "mini-css-extract-plugin": "^1.3.9",
+    "mini-css-extract-plugin": "^1.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^5.2.0",
     "style-loader": "^2.0.0",
@@ -34,19 +37,19 @@
   },
   "devDependencies": {
     "@types/jquery.validation": "^1.16.6",
-    "@types/node": "^14.14.35",
-    "@types/webpack": "^4.41.26",
-    "@types/webpack-dev-server": "^3.11.2",
+    "@types/node": "^15.0.2",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^3.11.4",
     "@webpack-cli/init": "^1.1.3",
-    "node-sass": "^5.0.0",
-    "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
-    "ts-loader": "^8.0.18",
+    "node-sass": "^6.0.0",
+    "sass": "^1.32.12",
+    "sass-loader": "^11.1.0",
+    "ts-loader": "^9.1.2",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^4.5.0"
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0"
   },
   "keywords": [],
   "description": ""
