--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@babel/preset-env": "^7.14.1",
     "@types/jquery": "^3.5.5",
     "@types/materialize-css": "^1.0.9",
+    "animate.css": "^4.1.1",
     "compression-webpack-plugin": "^7.1.2",
+    "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
     "eslint": "^7.26.0",
     "eslint-loader": "^4.0.2",
